--- a/Effects_Family.html
+++ b/Effects_Family.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Chris Memoli</title>
+    <title>Effects Family</title>
 
 <!--favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="images/memoli2.ioc.png">
@@ -106,12 +106,26 @@
                     <div id="carousel-example-generic" class="carousel slide">
 
         <div class="content">
+                        <center> <h1>how it effected my family</h1> </center>
 
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;     I have been going out to different schools in New York and New Jersey for over nine years trying to get my message out. I feel that it is so important for teens and young adults to see what I have gone through and what challenges I have on a daily basis. I can relate to them because I was young and wild when my life changed. It is amazing to sit and listen to some of the questions that they ask after the presentation. Usually it takes a little to get them started but when they do start asking questions it opens up a flood of discussions. The questions can range from what was the hardest part of your recovery to how do you feel when people look at me differently. I am very honest and do not have a problem with any question I may be asked. The wonderful part of this is that afterwards so many of the students come up to me and thank me for having the courage to get out there in front of everyone and tell my story. They are amazed that I did not give up and continues to work at getting better.</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     Without my speech it may take a minute or so to answer some of the questions, so they get to see what we all take for granted and what I struggle with. I also feel that it is healing to be able to speak to an audience and let them understand what I have been through and how difficult some of my challenges may be.</p>
-             <p>&nbsp;&nbsp;&nbsp;&nbsp;    There have been times outside of the presentation when students from the presentation will approach me and thank me for opening their eyes to what can really happen. The student will say I always wear my seat belt after attending your presentation. You never know if all are paying attention or if what you have to say effects them, but maybe just one student will walk away and take the time to think about their actions.</p>
-             <p>&nbsp;&nbsp;&nbsp;&nbsp;    I honestly feel that I have made a difference in some of the people I have met along the way giving my presentations. What better way for them to understand that there are consequences to every decision then to see me, and my everyday struggles for themselves</p>
-        </div>  
+
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp; As a mother and also a parent, I feel that this message is vital to get out to all teens and adults. Living through this horrific time in our life was very difficult. Imagine getting a phone call at 5:50 AM from one of your children's friends telling you that you must get to the hospital quickly because there was a car accident and one of your children is hurt badly. I remember standing in the emergency room listening to the neurologist tell me that my son is in a coma and has severe head injury. We will need to wait and see if he makes it through the first twenty-four hours. I remember standing next to his hospital bed in the Intensive Care Unit and just crying and praying that he would survive. Just looking at your child hooked up to life support, tubes everywhere, monitors beeping all day and knowing as a parent it is out of your hands, there is nothing that you can do. You feel so helpless, this cant be! You are his mother the one who is suppose to help your child and fix everything. This was just the beginning of a very long road to recovery.
+                    </p>
+
+
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;No one realizes how something like this effects the whole family. For over two years his family and friends came to the hospital daily to visit and help Chris through this very difficult and confusing time. During the day between therapy I would play his music, talk and read to him. In the evening his brother would come and spend hours with him looking at pictures, watching movies and listening to music. Through the past 9 years Chris has had many surgeries and years of rehabilitation which has effected the whole family. I was fortunate to be able to take a leave of absence during his hospital stay and time off for multiple surgeries.
+                    </p>
+                
+
+
+
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;     I have been going out to different schools in New York and New Jersey for over nine years trying to get my message out. I feel that it is so important for teens and young adults to see what I have gone through and what challenges I have on a daily basis. I can relate to them because I was young and wild when my life changed. It is amazing to sit and listen to some of the questions that they ask after the presentation. Usually it takes a little to get them started but when they do start asking questions it opens up a flood of discussions. The questions can range from what was the hardest part of your recovery to how do you feel when people look at me differently. I am very honest and do not have a problem with any question I may be asked. The wonderful part of this is that afterwards so many of the students come up to me and thank me for having the courage to get out there in front of everyone and tell my story. They are amazed that I did not give up and continues to work at getting better.</p>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;     Without my speech it may take a minute or so to answer some of the questions, so they get to see what we all take for granted and what I struggle with. I also feel that it is healing to be able to speak to an audience and let them understand what I have been through and how difficult some of my challenges may be.</p>
+                         <p>&nbsp;&nbsp;&nbsp;&nbsp;    There have been times outside of the presentation when students from the presentation will approach me and thank me for opening their eyes to what can really happen. The student will say I always wear my seat belt after attending your presentation. You never know if all are paying attention or if what you have to say effects them, but maybe just one student will walk away and take the time to think about their actions.</p>
+                         <p>&nbsp;&nbsp;&nbsp;&nbsp;    I honestly feel that I have made a difference in some of the people I have met along the way giving my presentations. What better way for them to understand that there are consequences to every decision then to see me, and my everyday struggles for themselves</p>
+
+
+     </div>  
                     <!-- end of carousel-->
                 </div>
             </div>
@@ -135,12 +149,6 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
 </body>
 
