--- a/press.html
+++ b/press.html
@@ -76,17 +76,17 @@
             <!-- Navigation -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active" style="color:red;" >
+                    <li>
                         <a href="index.html">Home</a>
                     </li>
 
-                    <li class="dropdown">
+                    <li class="dropdown active">
                           <a data-toggle="dropdown" class="dropdown-toggle" href="#">My Story <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="My_Life.html">My Life</a></li>
                         <li><a href="My_mission.html">My Mission</a></li>
                         <li><a href="Effects_family.html">Effects Family</a></li>
-                        <li><a href="press.html">Press page</a></li>
+                        <li class="active"><a href="press.html">Press page</a></li>
                         <li><a href="#">Blog page </a></li>
 
 
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Chris Memoli 2015</p>
                 </div>
             </div>
         </div>
