i added a few pictures and portfolio page and changed the navbar brand and brand and footer  a little

--- a/Effects_Family.html
+++ b/Effects_Family.html
@@ -51,11 +51,8 @@
                   MENU
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" rel="home" href="#" title="Presentations"style="text-align:center">
+                <a class="navbar-brand" rel="home" href="#" title="Presentations">
                     Educating students to the dangers of feeling invincible!!
-
-                    <img style="max-width:50px; margin-top: -44px; margin-left:-77px;"
-                         src="images/memoli2.jpg">
                 </a>
             </div>
          
@@ -152,6 +149,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+
+    <!-- Back to top button -->
+
+<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow25.js"></script>
+<noscript><a href="http://www.scrolltotop.com/"></a></noscript>
 
 </body>
 
