--- a/My_Life.html
+++ b/My_Life.html
@@ -33,9 +33,6 @@
 
 <body>
 
-<!--
-                    <a class="-brand" href="index.html"><img class="img-responsive" alt="Logo" src="images/logo_final.png">Educating students to the dangers of feeling invincible!!</a>
--->
     <div class="brand" style="margin-bottom:20px; padding-bottom:20px;">Educating students to the dangers of feeling invincible!!</div>
 
 
@@ -51,13 +48,12 @@
                   MENU
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" rel="home" href="#" title="Presentations"style="text-align:center">
+                <a class="navbar-brand" rel="home" href="#" title="Presentations"style="">
                     Educating students to the dangers of feeling invincible!!
 
-                    <img style="max-width:50px; margin-top: -44px; margin-left:-77px;"
-                         src="images/memoli2.jpg">
                 </a>
             </div>
+         
          
 
             <!-- Navigation -->
@@ -139,13 +135,10 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
+    <!-- Back to top button -->
 
+<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow25.js"></script>
+<noscript><a href="http://www.scrolltotop.com/"></a></noscript>
 </body>
 
 </html>
