--- a/photos.html
+++ b/photos.html
@@ -533,12 +533,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
+    <!-- Back to top button -->
+
+<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow25.js"></script>
+<noscript><a href="http://www.scrolltotop.com/"></a></noscript>
+
 
 </body>
 
