--- a/My_mission.html
+++ b/My_mission.html
@@ -51,7 +51,7 @@
                   MENU
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" rel="home" href="#" title="Presentations"style="text-align:center">
+                <a class="navbar-brand" rel="home" href="#" title="Presentations">
                     Educating students to the dangers of feeling invincible!!
 
                     <img style="max-width:50px; margin-top: -44px; margin-left:-77px;"
@@ -149,13 +149,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
+    <!-- Back to top button -->
+
+<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow25.js"></script>
+<noscript><a href="http://www.scrolltotop.com/"></a></noscript>
 </body>
 
 </html>
